--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "main": "dist/json.js",
   "browser": "dist/json.js",
   "jsnext:main": "dist/json.es.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "jest",
     "lint": "standard 'src/**/*.js'",
@@ -27,7 +29,11 @@
   },
   "author": "tiaanduplessis <tiaanduplessis@hotmail.com>",
   "babel": {
-    "presets": [["env"]]
+    "presets": [
+      [
+        "env"
+      ]
+    ]
   },
   "devDependencies": {
     "babel-preset-env": "^1.4.0",
@@ -38,7 +44,7 @@
     "standard": "^10.0.2"
   },
   "dependencies": {
-    "json-stringify-safe": "^5.0.1",
+    "fast-json-stringify": "^0.12.2",
     "parse-json": "^2.2.0"
   }
 }
